Fix small visual bugs on mobile chrome

--- a/frontend/src/styles/FilterBtn.module.scss
+++ b/frontend/src/styles/FilterBtn.module.scss
@@ -33,7 +33,7 @@
 	bottom: 0;
 	height: 3px;
 	background-color: $yellow;
-	transition: width 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 }
 
 .expanded {
